--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                     } else {
                         if (esMantOpt) {
                             resultadoElement
-                                .text('Aplica (Excepción Mantener/Optimizar): ' + motivo)
+                                .text('Sujeto a Autorización por Dirección Comercial: ' + motivo)
                                 .removeClass('no-aplica').addClass('aplica').show();
 
                             allowAgregarPromorack = true;
